--- a/client/wix/wixwidgetvideo.html
+++ b/client/wix/wixwidgetvideo.html
@@ -2,7 +2,7 @@
     <div id="video-bg">
         <video preload="auto" autoplay="autoplay" loop="loop" data-speed=".3" defaultPlaybackRate=".3" muted poster="/images/SlopePurple.png">
             <!-- Default video source: -->
-            <source type="video/mp4" src="/videos/SlopePurple.webm"
+            <source type="video/webm" src="/videos/SlopePurple.webm"
                     media="(orientation:landscape)">
             <source type="video/webm" src="https://s3.amazonaws.com/assets.pointlook.com/public/videos/big_buck_bunny.webm"
                     media="(orientation:landscape)">
