--- a/client/wix/wixwidgetvideo.html
+++ b/client/wix/wixwidgetvideo.html
@@ -1,8 +1,8 @@
 <template name='wixwidgetvideo'>
     <div id="video-bg">
-        <video preload="auto" autoplay="autoplay" loop="loop" data-speed=".3" defaultPlaybackRate=".3" muted poster="/images/SlopePurple.png">
+        <video preload="auto" autoplay="autoplay" loop="loop" data-speed=".3" defaultPlaybackRate=".3" muted poster="/images/qt1280.png">
             <!-- Default video source: -->
-            <source type="video/webm" src="/videos/SlopePurple.webm"
+            <source type="video/webm" src="/videos/qt1280.webm"
                     media="(orientation:landscape)">
             <source type="video/webm" src="https://s3.amazonaws.com/assets.pointlook.com/public/videos/big_buck_bunny.webm"
                     media="(orientation:landscape)">
