--- a/client/wix/wixwidgetvideo.html
+++ b/client/wix/wixwidgetvideo.html
@@ -4,7 +4,7 @@
             <!-- Default video source: -->
             <source type="video/mp4" src="/videos/qt1280.mp4"
                     media="(orientation:landscape)">
-            <source type="video/webm" src="https://s3.amazonaws.com/assets.pointlook.com/public/videos/big_buck_bunny.webm"
+            <source type="video/webm" src="/videos/qt1280.webm"
                     media="(orientation:landscape)">
             <!-- Use square video source to waste less bandwidth: -->
             <source type="video/mp4" src="myvid_square.mp4"
